--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
       padding: 0 10px; /* Add padding to the sides */
     }
 
-    .user-list {
-      display: flex;
-      flex-direction: column;
-      align-items: center; /* Center items horizontally */
-      width: 100%;
-      max-width: 800px;
-    }
+  
 
+    .user-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  justify-content: center; /* Center items vertically */
+  width: 100%;
+  max-width: 800px;
+}
     .user-list-item {
       cursor: pointer;
       margin-bottom: 20px;
